--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,7 @@
-import groovy.io.FileType
-import com.amazonaws.auth.STSAssumeRoleSessionCredentialsProvider
-import com.amazonaws.services.s3.AmazonS3Client
-
 apply plugin: 'java-library'
 apply plugin: 'maven-publish'
 
-group = 'com.mojang'
+group = 'com.velocitypowered'
 version = project.hasProperty('buildNumber') ? "${project.majorMinor}.${project.buildNumber}" : "${project.majorMinor}.0-SNAPSHOT"
 
 buildscript {
@@ -14,10 +10,6 @@ buildscript {
         maven {
             url "https://libraries.minecraft.net"
         }
-    }
-
-    dependencies {
-        classpath 'com.amazonaws:aws-java-sdk:1.11.33'
     }
 }
 
@@ -90,40 +82,19 @@ task report {
     }
 }
 
-def publishDir = file("$buildDir/repo")
-
-
-def uploadFile(s3, bucket, path, filename) {
-    println "Uploading $filename to $bucket as $path"
-    s3.putObject(bucket, path, filename)
-}
-
-clean.doLast {
-    delete publishDir
-}
-
-if (version.endsWith("SNAPSHOT")) {
-    publishing.repositories {
-        mavenLocal()
-    }
-} else {
-    publishing.repositories {
+publishing {
+    repositories {
         maven {
-           url "$buildDir/repo"
-        }
-    }
-
-    publish.doLast {
-        def AWSRoleARN = (System.getenv("AWS_ROLE_ARN") != null && System.getenv("AWS_ROLE_ARN") != "" ? System.getenv("AWS_ROLE_ARN") : null)
-        if (AWSRoleARN == null) throw new GradleException("AWS Role has not been configured, use the `AWS_ROLE_ARN` environment variable")
-        def auth = new STSAssumeRoleSessionCredentialsProvider.Builder(AWSRoleARN, "JavaBrigadierPublish").build()
-        def s3 = new AmazonS3Client(auth)
-        publishDir.eachFileRecurse {
-            if (!it.name.contains(".xml") && !it.name.contains(".md5") && it.isFile()) {
-                def relPath = publishDir.toPath().relativize(it.toPath()).toFile().toString().replaceAll('\\\\', '/')
-                uploadFile(s3, "minecraft-libraries", relPath, it)
+            credentials {
+                username System.getenv("NEXUS_USERNAME")
+                password System.getenv("NEXUS_PASSWORD")
             }
+
+            name = 'velocity-nexus'
+            def base = 'https://nexus.velocitypowered.com/repository/velocity-artifacts'
+            def releasesRepoUrl = "$base-release/"
+            def snapshotsRepoUrl = "$base-snapshots/"
+            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
         }
     }
 }
-
